# CFReT-screen-mAP-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: config.yaml
notebooks/0.download-data/: 0.download-data.ipynb  0.download-data.sh
notebooks/0.download-data/nbconverted/: 0.download-data.py
notebooks/1.mAP-analysis/: 1.mAP-analysis.ipynb  config.yaml
notebooks/1.map-analysis/: 1.run-map.ipynb  1.run-map.sh  2.map-analysis.ipynb  run-map.sh
notebooks/1.map-analysis/nbconverted/: 1.run-map.py  2.map-analysis.py
notebooks/1.map-analysis/results/: positive_control_healthy_DMSO_mAP_scores.csv  shared_features.json
notebooks/2.single-cell-compound-prio/: 1.on_off_morphology_signatures.ipynb  2.single_cell_heterogeneity.ipynb  3.apply_metric.ipynb  4.selecting_hits.ipynb  4.selecting_hits.py  run-single-cell-compound-prio-pipeline.sh  run_single_cell_heterogeneity.sh
notebooks/2.single-cell-compound-prio/nbconverted/: 1.on_off_morphology_signatures.py  2.single_cell_hetergeneity.py  2.single_cell_heterogeneity.py  3.apply_metric.py  4.selecting_hits.py
notebooks/additional-analysis/correlation-analysis/: correlation-analysis.ipynb  preprocessing-data.ipynb
notebooks/additional-analysis/kbet-analysis/: batch1_4_plates_aggregated_fs.csv  convert_parquet_to_csv.ipynb  kbet-analysis.ipynb  kbet-r.yaml
notebooks/additional-analysis/spherzing-analysis/: spherzing-analysis.ipynb
notebooks/data/: compound_metadata.csv
notebooks/exploratory-analysis/: r-deps.yaml
notebooks/exploratory-analysis/UMAP-aggregated-fs-profiles/: concat-profiles.ipynb  run-umap.sh  umap-analysis.ipynb
notebooks/exploratory-analysis/correlation-matrix/: correlation-analysis.ipynb  run-corr-analysis.sh
notebooks/exploratory-analysis/kbet-analysis/: kbet-analysis.ipynb  run-kbet.sh
src/: data_utils.py  io_utils.py
utils/: analysis_utils.py  data_utils.py  io_utils.py
(+54 files in other folders)
